# AI-Novel-Generation

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  dev.sh  openapitools.json  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
.omo/: boulder.json
.omo/drafts/: agent-and-project-optimization.md
.omo/evidence/: f2-mypy-baseline.txt  f2-preexisting-mypy.txt  task-1-agent-and-project-optimization.md  task-18-agent-and-project-optimization.md  task-19-agent-and-project-optimization.md  task-20-agent-and-project-optimization.md  task-21-agent-and-project-optimization.md  task-24-agent-and-project-optimization.md  task-26-agent-and-project-optimization.md  task-31-agent-and-project-optimization.md  task-35-agent-and-project-optimization.md  task-36-agent-and-project-optimization.md  task-7-agent-and-project-optimization.md
.omo/plans/: agent-and-project-optimization.md
.omo/run-continuation/: ses_1122e376effeMoVwxDYiXIFhge.json  ses_116a6a244fferM6Jn9fWZVjnj5.json  ses_116a6d62bffeQFlvrdok4iZ2qz.json  ses_119ef1c0affejIKrKZrqB1ebP0.json  ses_11a43f025ffecBwXyoIozMl4Cy.json
.omo/start-work/: ledger.jsonl
app/: config.py  database.py  main.py
app/agents/: __init__.py  autonomy.py  base.py  blackboard.py  orchestrator.py  protocols.py
app/llm/: adapter.py  claude_adapter.py  context_builder.py  exceptions.py  openai_adapter.py  provider_registry.py
app/middleware/: auth.py
app/migrations/: __init__.py  m001_token_usage_to_ai_call.py  m002_add_agent_task_columns.py  m003_add_idea_updated_at.py
app/models/: __init__.py  agent_message.py  agent_task.py  ai_call.py  chapter.py  chapter_snapshot.py  config.py  idea.py  outline.py  project.py  review.py  setting.py  style.py  token_usage.py
app/routers/: agent.py  brainstorming.py  chapters.py  config.py  ideas.py  outline_gen.py  outlines.py  projects.py  reviews.py  search.py  settings.py  styles.py
app/schemas/: chapter.py  outline.py  project.py  response.py  setting.py
app/services/: brainstorm_service.py  chapter_service.py  cleaning_service.py  config_service.py  idea_service.py  outline_gen_service.py  outline_service.py  project_service.py  review_service.py  search_service.py  setting_service.py  style_service.py
app/templates/: _breadcrumb.html  _palette.html  (+3 more)
novel-frontend/: biome.json  next.config.ts  package-lock.json  package.json  vitest.config.ts
tests/: conftest.py  test_adapter_records.py  test_agent_base.py  test_agent_record_usage.py  test_agent_router.py  test_agent_tools.py  test_ai_call_model.py  test_api_chapters.py  test_api_config.py  test_api_ideas.py  test_api_outlines.py  test_api_projects.py  test_api_reviews.py  test_api_settings.py  test_api_styles.py  test_blackboard.py  test_brainstorm_agent.py  test_cancel.py  test_confirm_flow.py  test_consistency_tools.py  test_lifespan_logging.py  test_llm_adapter_tooluse.py  test_milestone_loop.py  test_no_deprecation_warnings.py  test_orchestrator.py  test_orchestrator_session_isolation.py  test_record_usage_all_sites.py  test_resume.py  test_rollback.py  test_run_agent_native_tooluse.py  test_search_router.py  test_search_service.py  test_services_tools.py  test_setting_conflicts.py  test_smoke.py  test_sse_e2e.py
(+147 files in other folders)
