[project]
name = "ai-novel-generation"
version = "0.1.0"
description = "LLM-assisted novel writing tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "jinja2>=3.1.3",
    "anthropic>=0.39.0",
    "openai>=1.30.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
novel-forge = "app.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
