[project]
name = "ai-novel-generation"
version = "0.2.0"
description = "Novel Forge — AI 辅助小说创作工具，支持多智能体编排、脑暴、大纲生成、文风分析与智能写作"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "sihan", email = "" },
]
keywords = ["novel", "writing", "ai", "llm", "fiction", "creative-writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Writers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Creative Writing",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "jinja2>=3.1.3",
    "anthropic>=0.39.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
novel-forge = "app.main:start"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
dev = [
    "pip-tools",
    "pre-commit",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E402", "E731", "SIM117"]
"app/routers/*.py" = ["B008"]
"app/agents/base.py" = ["E402"]
"app/models/__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "httpx.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
